--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 
 [project]
 name = "pydantic_tools"
-version = "1.0.0a"
+version = "0.3.0"
 description = "Useful tools for pydantic"
 authors = [
     {name = "icebear", email = "iiiicebeaaaar@gmail.com"},
@@ -11,6 +11,7 @@ dependencies = [
     "pytest>=7.3.1",
     "rich>=13.3.5",
     "bullet>=2.2.0",
+    "click>=8.1.3",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
