--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,15 +16,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+    - uses: pdm-project/setup-pdm@v3
+      name: Setup PDM
       with:
-        python-version: "3.10"
+        python-version: 3.11  # Version range or exact version of a Python version to use, the same as actions/setup-python
+        architecture: x64    # The target architecture (x86, x64) of the Python interpreter. the same as actions/setup-python
+        prerelease: true     # Allow prerelease versions to be installed
+        enable-pep582: true  # Enable PEP 582 package loading globally
     - name: Install dependencies with pdm
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytest pytest-cov pdm
-        if [ -f pdm.lock ]; then pdm install; fi
+      run: pdm install  
     - name: Test with pytest
       run: |
         pdm run pytest --cov=pydantic_tools/ --cov-report xml
