--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,6 +14,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    environment:
+      name: pypi
+      url: https://pypi.org/p/pydantic-tools
+    
+    permissions:
+      id-token: write
+
     steps:
     - uses: actions/checkout@v3
     - uses: pdm-project/setup-pdm@v3
@@ -30,3 +37,7 @@ jobs:
         pdm run pytest --cov=pydantic_tools/ --cov-report xml
     - name: Upload coverage reports to Codecov with GitHub Action
       uses: codecov/codecov-action@v3
+
+    - name: Upload to pypi
+      uses: pypa/gh-action-pypi-publish@release/v1
+      
